latest project changes as of 29th July

--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
                         class="mb-0 mr-[1.275rem] gap-[0.825rem] flex flex-row justify-center items-center font-menu md:mr-[1.75rem]">
                         <li class="text-[#f5f5dc] list-none text-lg"><a
                                 class="lg:px-[18px] lg:py-[3px] bg-[#161614] text-white block rounded-[20px] md: px-[12px] md: py-[2px]"
-                                href="/signIn.html">Sign in</a></li>
-                        <li class="text-[#f5f5dc] list-none text-lg"><a
-                                class="lg:px-[18px] lg:py-[3px] bg-[#161614] text-white block rounded-[20px] md: px-[12px] md: py-[2px]"
-                                href="/signUp.html">Sign up</a></li>
+                                href="./Homepage - main/homepage.html">DashBoard</a></li>
                     </ul>
                 </div>
             </div>
